--- a/index.css
+++ b/index.css
@@ -1,10 +1,9 @@
 body {
     display: block;
     background-color: lavender;
-    align-content: center;
     margin-left: auto;
     margin-right: auto;
-    vertical-align: middle;
+    margin: auto;
 }
 
 header {
